Fix styling of tabs in dark mode

--- a/.vuepress/styles/index.styl
+++ b/.vuepress/styles/index.styl
@@ -300,6 +300,13 @@ a[href*='.openhab.org'] .outbound
         .custom-block.details
             background-color rgb(32, 32, 32) !important
 
+    .vuepress-tabs
+        .tabs-component
+            .tabs-component-tab.is-active .tabs-component-tab-a
+                background #000 !important
+            .tabs-component-panels
+                background #000 !important
+
     .os-tab, .distro-tab, .version-tab
         &:hover
             background rgb(32, 32, 32) !important
